@@ -931,7 +931,7 @@ public class JSONObject {
    *           If the key is null.
    */
   public JSONObject put(String key, int value) throws JSONException {
-    put(key, new Integer(value));
+    put(key, Integer.valueOf(value));
     return this;
   }
 
@@ -1141,7 +1141,7 @@ public class JSONObject {
     if ((b >= '0' && b <= '9') || b == '.' || b == '-' || b == '+') {
       if (b == '0' && s.length() > 2 && (s.charAt(1) == 'x' || s.charAt(1) == 'X')) {
         try {
-          return new Integer(Integer.parseInt(s.substring(2), 16));
+          return Integer.parseInt(s.substring(2), 16);
         } catch (Exception ignore) {
         }
       }
@@ -1151,7 +1151,7 @@ public class JSONObject {
         } else {
           Long myLong = new Long(s);
           if (myLong.longValue() == myLong.intValue()) {
-            return new Integer(myLong.intValue());
+            return myLong.intValue();
           } else {
             return myLong;
           }
